change workflow to run on push main

--- a/.github/workflows/cd-setup-continuous-deployment.yaml
+++ b/.github/workflows/cd-setup-continuous-deployment.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "setup-continuous-deployment"
+      - "main"
 
 env:
   KUBE_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }} # used in kubernetes-deploy.yaml too
